Fixed missing background for staff.html

--- a/public/main.css
+++ b/public/main.css
@@ -218,6 +218,14 @@
   
      /*  -----  fieldset ----- */  
 
+    .staff {
+      background-color: var(--light-color); /* Set background color */
+      padding-top: 10px;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 10px;
+    }
+
      
   
   /*  -----  Typography  ----- */
